objects/CodeBuilder__Workspace__c.object
<CustomObject>
    <fields>
        <fullName>CodeBuilder__CSRFToken__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A unique random string associated with this Workspace</description>
        <externalId>true</externalId>
        <label>Token to prevent CSRF attacks</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CodeBuilder__Error_State_Info__c</fullName>
        <description>This field will store any sort of error response that we get from the API service during the life-cycle of the workspace.</description>
        <label>Error_State_Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CodeBuilder__Last_Accessed__c</fullName>
        <description>the last time the workspace was accessed.</description>
        <label>Last Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CodeBuilder__Remote_Resource_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The resource ID returned from Provisioning API.</description>
        <externalId>true</externalId>
        <label>Remote Resource ID</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CodeBuilder__Status__c</fullName>
        <defaultValue>&apos;PROVISIONING&apos;</defaultValue>
        <description>The status of the resource that makes up the workspace.</description>
        <label>Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CodeBuilder__URL__c</fullName>
        <description>The url to the workspace ( web ide )</description>
        <inlineHelpText>This is the url of the workspace. Opens in a new window.</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Environment</label>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CodeBuilder__CannotChangeWorkspaceName</fullName>
        <active>false</active>
        <description>Workspace name cannot be changed</description>
        <errorConditionFormula>ISCHANGED(Name)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Workspace name cannot be changed</errorMessage>
    </validationRules>
</CustomObject>